syntax = "proto3";

package v1;

service InitializerService {
  rpc Status(StatusRequest) returns (StatusResponse);
}

message StatusRequest {}

message StatusResponse {
  enum InitializerStatus {
    CHECKING = 0;
    RESTORING = 1;
    DONE = 2;
    UPGRADING = 3;
  }
  InitializerStatus status = 1;
  string message = 2;
}
